// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag href renders as an anchor 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<a
    class="emotion-1"
    href="#"
  >
    <div
      class="emotion-0"
    />
  </a>
</DocumentFragment>
`;

exports[`Tag href renders in disable state as a span 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders a tag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  background-color: #FFFFFF;
  color: #0A68C1;
  border-radius: 100vw;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-1:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders in disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<span
    class="emotion-0"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Tag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.75;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with Medium size 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with Small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  color: #2e2e2e;
}

.emotion-0 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
  >
    <div
      class="emotion-0"
    />
  </span>
</DocumentFragment>
`;
